--- a/KGERP/Views/Consumption/ConsumptionMasterSlave.cshtml
+++ b/KGERP/Views/Consumption/ConsumptionMasterSlave.cshtml
@@ -63,56 +63,60 @@
 
                     <div class="box-body">
                         @if (Model.ConsumptionMasterId > 0)
-                        {
-                            <div class="row mb-5">
-                                <div class="col-md-1"> </div>
-                                <div class="col-md-10">
-                                    <table class="table">
-                                        <tr>
-                                            <th style="width:17% !important">Project Type 
-                                            <th>
-                                            <th>:</th>
-                                            <td>@Model.ProjectTypeName</td>
+                        {@Html.HiddenFor(model => model.BOQItemId, new { id = "hidBoqIteamId" })
+                        <div class="row mb-5">
+                            <div class="col-md-1"> </div>
+                            <div class="col-md-10">
+                                <table class="table">
+                                    <tr>
+                                        <th style="width:17% !important">Project Type </th>
+                                        <th>:</th>
+                                        <td>@Model.ProjectTypeName</td>
 
-                                            <th style="width:17% !important">Consumption Date </th>
-                                            <th>:</th>
-                                            <td>@Model.ConsumptionDate</td>
-                                        </tr>
+                                        <th style="width:17% !important">Consumption Date</th>
+                                        <th>:</th>
+                                        <td>
+                                            @Model.ConsumptionDate.ToString("dd/MM/yyyy")
+                                        </td>
+                                    </tr>
 
-                                        <tr>
-                                            <th style="width:17% !important">Project Name </th>
-                                            <th>:</th>
-                                            <td>@Model.CostCenterName</td>
+                                    <tr>
+                                        <th style="width:17% !important">Project Name </th>
+                                        <th>:</th>
+                                        <td>@Model.CostCenterName</td>
 
-                                            <th style="width:17% !important">Store Name</th>
-                                            <th>:</th>
-                                            <td>
-                                                @Model.StoreName
-                                            </td>
-                                        </tr>
+                                        <th style="width:17% !important">Store Name</th>
+                                        <th>:</th>
+                                        <td>
+                                            @Model.StoreName
+                                        </td>
+                                    </tr>
 
-                                        <tr>
-                                            <th style="width:17% !important">BoQ Division</th>
-                                            <th>:</th>
-                                            <td>@Model.BoQDivisionName</td>
+                                    <tr>
+                                        <th style="width:17% !important">BoQ Division</th>
+                                        <th>:</th>
+                                        <td>@Model.BoQDivisionName</td>
 
-                                            <th style="width:17% !important">BoQ Item</th>
-                                            <th>:</th>
-                                            <td>
-                                                @Model.BOQItemName
-                                            </td>
-                                        </tr>
+                                        <th style="width:17% !important">BoQ Item</th>
+                                        <th>:</th>
+                                        <td>
+                                            @Model.BOQItemName
+                                        </td>
+                                    </tr>
 
-                                        <tr>
-                                            <th style="width:17% !important">Created By</th>
-                                            <th>:</th>
-                                            <td>@Model.CreatedBy</td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                <div class="col-md-1"> </div>
+                                    <tr>
+                                        <th style="width:17% !important">Created By</th>
+                                        <th>:</th>
+                                        <td>@Model.CreatedBy</td>
+                                        <th style="width:17% !important"></th>
+                                        <th></th>
+                                        <td></td>
+                                    </tr>
+                                </table>
                             </div>
-                        }
+                            <div class="col-md-1"> </div>
+                        </div>
+                    }
 
 
                         @if (Model.ConsumptionMasterId == 0)
@@ -150,7 +154,7 @@
                                     <div class="form-group">
                                         <label>Store Location :</label>
                                         @Html.DropDownListFor(model => model.StockInfoId, Model.StockInfoList as SelectList, "==Select Store==", new { id = "ddlStoreId", @class = "form-control searchingDropdown", style = "width:100%", required = "requried" })
-                                        @Html.ValidationMessageFor(model => model.CostCenterId, "", new { @class = "text-danger" })
+                                        @Html.ValidationMessageFor(model => model.StockInfoId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-3 d-block" id="inputDivision">
@@ -171,54 +175,55 @@
 
                             </div>
                         }
-                        <div class="row">
-                            <div class="col-md-3 d-block" id="MaterialType">
-                                <div class="form-group">
-                                    <label id="materialTitle"> Material :</label>
-                                    @Html.DropDownListFor(model => model.DetailModel.ProductId, Model.MaterialTypeList as SelectList, "==Select Material==", new { id = "ddlRequisitionItemId", @class = "form-control searchingDropdown", style = "width:100%", })
-                                    @Html.ValidationMessageFor(model => model.DetailModel.ProductId, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-                            <div class="col-md-3 d-block" id="inputEstimateQty">
-                                <div class="form-group">
-                                    <label>Stored Quantity :</label>
-                                    @Html.TextBoxFor(model => model.DetailModel.StoredQty, new { id = "decEstimatedQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Estimate quantity", ReadOnly = "true" })
-                                    @Html.ValidationMessageFor(model => model.DetailModel.StoredQty, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 d-block" id="inputReceivedSoFar">
-                                <div class="form-group">
-                                    <label>Unit Price </label>
-                                    @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "decUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Received so far", ReadOnly = "true" })
-                                    @Html.ValidationMessageFor(model => model.DetailModel.UnitPrice, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 d-block" id="inputRemainingQty">
-                                <div class="form-group">
-                                    <label>Remaining Quantity :</label>
-                                    @Html.TextBoxFor(model => model.DetailModel.RemainingQty, new { id = "decRemainingQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Remaining quantity", ReadOnly = "true" })
-                                    @Html.ValidationMessageFor(model => model.DetailModel.RemainingQty, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 d-block" id="inputTotalPrice">
-                                <div class="form-group">
-                                    <label id="totalTitle">Total Amount :</label>
-                                    @Html.TextBoxFor(model => model.DetailModel.TotalPrice, new { id = "decTotalPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Total amount", ReadOnly = "true" })
-                                    @Html.ValidationMessageFor(model => model.DetailModel.TotalPrice, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
-
-                            <div class="col-md-3 d-block" id="inputUnitRate">
-                                <div class="form-group">
-                                    <label id="unitTitle">Consumption Quantity</label>
-                                    @Html.TextBoxFor(model => model.DetailModel.ConsumedQty, new { id = "decConsumptionQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Consumption Quantity", })
-                                    @Html.ValidationMessageFor(model => model.DetailModel.ConsumedQty, "", new { @class = "text-danger" })
-                                </div>
+                    <div class="row">
+                        <div class="col-md-3 d-block" id="MaterialType">
+                            <div class="form-group">
+                                <label id="materialTitle"> Material :</label>
+                                @Html.DropDownListFor(model => model.DetailModel.ProductId, Model.MaterialTypeList as SelectList, "==Select Material==", new { id = "ddlRequisitionItemId", @class = "form-control searchingDropdown", style = "width:100%", })
+                                @Html.ValidationMessageFor(model => model.DetailModel.ProductId, "", new { @class = "text-danger" })
                             </div>
                         </div>
+                        <div class="col-md-3 d-block" id="inputEstimateQty">
+                            <div class="form-group">
+                                <label>Stored Quantity :</label>
+                                @Html.TextBoxFor(model => model.DetailModel.StoredQty, new { id = "decEstimatedQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Estimate quantity", ReadOnly = "true" })
+                                @Html.ValidationMessageFor(model => model.DetailModel.StoredQty, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 d-block" id="inputReceivedSoFar">
+                            <div class="form-group">
+                                <label>Unit Price </label>
+                                @Html.TextBoxFor(model => model.DetailModel.UnitPrice, new { id = "decUnitPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Received so far", ReadOnly = "true" })
+                                @Html.ValidationMessageFor(model => model.DetailModel.UnitPrice, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 d-block" id="inputRemainingQty">
+                            <div class="form-group">
+                                <label>Remaining Quantity :</label>
+                                @Html.TextBoxFor(model => model.DetailModel.RemainingQty, new { id = "decRemainingQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Remaining quantity", ReadOnly = "true" })
+                                @Html.ValidationMessageFor(model => model.DetailModel.RemainingQty, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                       
+                        <div class="col-md-3 d-block" id="inputTotalPrice">
+                            <div class="form-group">
+                                <label id="totalTitle">Total Amount :</label>
+                                @Html.TextBoxFor(model => model.DetailModel.TotalPrice, new { id = "decTotalPrice", type = "number", step = "0.01", @class = "form-control", placeholder = "Total amount", ReadOnly = "true" })
+                                @Html.ValidationMessageFor(model => model.DetailModel.TotalPrice, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-3 d-block" id="inputUnitRate">
+                            <div class="form-group">
+                                <label id="unitTitle">Consumption Quantity</label>
+                                @Html.TextBoxFor(model => model.DetailModel.ConsumedQty, new { id = "decConsumptionQty", type = "number", step = "0.01", @class = "form-control", placeholder = "Consumption Quantity", })
+                                @Html.ValidationMessageFor(model => model.DetailModel.ConsumedQty, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
 
                     </div>
 
@@ -774,10 +779,10 @@
 
         $("#ddlRequisitionItemId").on('change', function () {
             var productId = $(this).val();
-            var boqItemId = $("#ddlBOQItemId").val();
+            var boqItemId = $("#hidBoqIteamId").val();
             $.ajax({
                 type: "GET",
-                url: "/MaterialReceive/GetMaterialReceiveLByProductId",
+                url: "/MaterialReceive/GetMaterialReceiveLByBoqItemAndProductId",
                 dataType: "json",
                 data: { BoqItem: boqItemId, ProductId: productId },
                 success: function (data) {
