--- a/KGERP/Views/VendorType/Index.cshtml
+++ b/KGERP/Views/VendorType/Index.cshtml
@@ -73,7 +73,7 @@
                                     </thead>
                                     @{int sl = 0;
                                     }
-                                    @*<tbody>
+                                    <tbody>
                                         @foreach (var item in Model.DataList.OrderBy(order => order.Name))
                                         {
 
@@ -90,7 +90,7 @@
                                                 </td>
                                             </tr>
                                         }
-                                    </tbody>*@
+                                    </tbody>
                                 </table>
                             </div>
                         </div>
