--- a/KGERP/Views/Employee/Details.cshtml
+++ b/KGERP/Views/Employee/Details.cshtml
@@ -4,211 +4,243 @@
     ViewBag.Title = "Details";
 }
 
+<section class="content-header">
+    
 
-<div class="row">
-    <table class="table table-striped table-bordered">
-        <tbody>
-            <tr>
-                <td colspan="4">
-                    <div style="width: 100px;">
-                        <img style="margin: 2px;" alt="Picture" height="100" width="100" src="@Url.Content(Model.ImagePath)" />
-                    </div>
-                    <div style="width: 350px;float: left;margin-left: 104px;margin-top: -20px;">
-                        <span><b>Name : </b></span> <span>@Model.Name</span><br />
-                        <span><b>Employee ID: </b></span> <span>@Model.EmployeeId</span>
-                    </div>
-                </td>
-            </tr>
 
-        </tbody>
-    </table>
-    <div style="background-color:#4CAF50;color:#FFFFFF;padding:2px;">
-        <h4><b>Personal Details</b></h4>
+        <table class="table table-striped table-bordered ">
+            <tbody>
+                <tr>
+                    <td colspan="4">
+                        <div style="width: 100px;">
+                            <img style="margin: 2px;" alt="Picture" height="100" width="100" src="@Url.Content(Model.ImagePath)" />
+                        </div>
+                        <div style="width:350px;float: left;margin-left:104px;margin-top:-20px; margin-left:120px">
+                            <span><b>Name : </b></span> <span>@Model.Name</span><br />
+                            <span><b>Employee ID: </b></span> <span>@Model.EmployeeId</span>
+                        </div>
+                    </td>
+                </tr>
+
+            </tbody>
+        </table>
+  
+</section>
+
+<div class="row ">
+
+    <div class="box-header">
+        <div style="background-color:#4CAF50;color:#FFFFFF;padding:2px;">
+            <h4><b>Personal Details</b></h4>
+        </div>
     </div>
-    <table class="table table-striped table-bordered">
-        <tbody>
-            <tr>
-                <td style="font-weight:bold">Name</td>
-                <td>@Model.Name</td>
-                <td style="font-weight:bold">Nick Name</td>
-                <td>@Model.ShortName</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Date of Birth</td>
-                <td>
-                    @if (Model.DateOfBirth.HasValue)
-                    {
-                        @Model.DateOfBirth.Value.ToString("dd-MMM-yyyy")
-                    }
-                </td>
-                <td style="font-weight:bold">Gender</td>
-                <td>@Html.DisplayFor(model => model.DropDownItem4.Name)</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Father Name</td>
-                <td>@Model.FatherName</td>
-                <td style="font-weight:bold">Mother Name</td>
-                <td>@Model.MotherName</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Present Address</td>
-                <td>@Model.PresentAddress</td>
-                <td style="font-weight:bold">Permanent Address</td>
-                <td>@Model.PermanentAddress</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Marital Status </td>
-                <td>@Html.DisplayFor(model => model.DropDownItem7.Name)</td>
-                <td style="font-weight:bold">Marriage Date</td>
-                <td>
-                    @if (Model.DateOfMarriage.HasValue)
-                    {
-                        @Model.DateOfMarriage.Value.ToString("dd-MMM-yyyy")
-                    }
-                </td>
-            </tr>
+    <div class="box-body">
+        <table class="table table-striped table-bordered">
+            <tbody>
+                <tr>
+                    <td style="font-weight:bold">Name</td>
+                    <td>@Model.Name</td>
+                    <td style="font-weight:bold">Nick Name</td>
+                    <td>@Model.ShortName</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Date of Birth</td>
+                    <td>
+                        @if (Model.DateOfBirth.HasValue)
+                        {
+                            @Model.DateOfBirth.Value.ToString("dd-MMM-yyyy")
+                        }
+                    </td>
+                    <td style="font-weight:bold">Gender</td>
+                    <td>@Html.DisplayFor(model => model.DropDownItem4.Name)</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Father Name</td>
+                    <td>@Model.FatherName</td>
+                    <td style="font-weight:bold">Mother Name</td>
+                    <td>@Model.MotherName</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Present Address</td>
+                    <td>@Model.PresentAddress</td>
+                    <td style="font-weight:bold">Permanent Address</td>
+                    <td>@Model.PermanentAddress</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Marital Status </td>
+                    <td>@Html.DisplayFor(model => model.DropDownItem7.Name)</td>
+                    <td style="font-weight:bold">Marriage Date</td>
+                    <td>
+                        @if (Model.DateOfMarriage.HasValue)
+                        {
+                            @Model.DateOfMarriage.Value.ToString("dd-MMM-yyyy")
+                        }
+                    </td>
+                </tr>
 
 
-            <tr>
-                <td style="font-weight:bold">Spouse </td>
-                <td>@Model.SpouseName</td>
-                <td style="font-weight:bold">Blood Group</td>
-                <td>@Html.DisplayFor(model => model.DropDownItem.Name)</td>
+                <tr>
+                    <td style="font-weight:bold">Spouse </td>
+                    <td>@Model.SpouseName</td>
+                    <td style="font-weight:bold">Blood Group</td>
+                    <td>@Html.DisplayFor(model => model.DropDownItem.Name)</td>
 
-            </tr>
+                </tr>
 
-            <tr>
-                <td style="font-weight:bold">Country</td>
-                <td> @Html.DisplayFor(model => model.DropDownItem1.Name)</td>
-                <td style="font-weight:bold">National Id</td>
-                <td>@Model.NationalId</td>
-            </tr>
+                <tr>
+                    <td style="font-weight:bold">Country</td>
+                    <td> @Html.DisplayFor(model => model.DropDownItem1.Name)</td>
+                    <td style="font-weight:bold">National Id</td>
+                    <td>@Model.NationalId</td>
+                </tr>
 
-            <tr>
-                <td style="font-weight:bold">Religion</td>
-                <td>
-                    @if (Model.DropDownItem9 != null)
-                    {
-                        @Model.DropDownItem9.Name
-                    }
-                </td>
-                <td style="font-weight:bold">District</td>
-                <td>
-                    @if (Model.District != null)
-                    {
-                        @Model.District.Name
-                    }
-                </td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Personal Email</td>
-                <td>@Model.Email</td>
-                <td style="font-weight:bold">Contact No</td>
-                <td>@Model.MobileNo</td>
-            </tr>
+                <tr>
+                    <td style="font-weight:bold">Religion</td>
+                    <td>
+                        @if (Model.DropDownItem9 != null)
+                        {
+                            @Model.DropDownItem9.Name
+                        }
+                    </td>
+                    <td style="font-weight:bold">District</td>
+                    <td>
+                        @if (Model.District != null)
+                        {
+                            @Model.District.Name
+                        }
+                    </td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Personal Email</td>
+                    <td>@Model.Email</td>
+                    <td style="font-weight:bold">Contact No</td>
+                    <td>@Model.MobileNo</td>
+                </tr>
 
-            <tr>
-                <td style="font-weight:bold">Passport No</td>
-                <td>@Model.PassportNo</td>
-                <td style="font-weight:bold">Driving License</td>
-                <td>@Model.DrivingLicenseNo</td>
-            </tr>
+                <tr>
+                    <td style="font-weight:bold">Passport No</td>
+                    <td>@Model.PassportNo</td>
+                    <td style="font-weight:bold">Driving License</td>
+                    <td>@Model.DrivingLicenseNo</td>
+                </tr>
 
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
+    <div class="box-header">
+        <div style="background-color:#4CAF50;color:#FFFFFF;padding:2px;">
+            <h4><b>Service Information</b></h4>
+        </div>
+    </div>
+    <div class="box-body">
+        <table class="table table-striped table-bordered">
+            <tbody>
+                <tr>
+                    <td style="font-weight:bold">Employee ID</td>
+                    <td>@Model.EmployeeId</td>
+                    <td style="font-weight:bold">Card ID</td>
+                    <td>@Model.CardId</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Department</td>
+                    <td>@Model.Department.Name</td>
+                    <td style="font-weight:bold">Designation</td>
+                    <td>@Model.Designation.Name</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Reporting Person</td>
+                    <td>@(Model.Employee3?.Name)</td>
+                    <td style="font-weight:bold">Reporting Person ID</td>
+                    <td>@(Model.Employee3?.EmployeeId)</td>
+                </tr>
 
-    <div style="background-color:#4CAF50;color:#FFFFFF;padding:2px;">
-        <h4><b>Service Information</b></h4>
+                <tr>
+                    <td style="font-weight:bold">Joining Date</td>
+                    <td>
+                        @if (Model.JoiningDate.HasValue)
+                        {
+                            @Model.JoiningDate.Value.ToString("dd-MMM-yyyy")
+                        }
+                    </td>
+                    <td style="font-weight:bold">Employee Category</td>
+                    <td>@Html.DisplayFor(model => model.DropDownItem3.Name)</td>
+
+                </tr>
+
+                <tr>
+                    <td style="font-weight:bold">Job Type</td>
+                    <td>@Html.DisplayFor(model => model.DropDownItem5.Name)</td>
+                    <td style="font-weight:bold">Office Type</td>
+                    <td>@Html.DisplayFor(model => model.DropDownItem8.Name)</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Office Email</td>
+                    <td>@Model.OfficeEmail</td>
+                    <td style="font-weight:bold">PABX</td>
+                    <td>@Model.PABX</td>
+
+                </tr>
+
+
+                <tr>
+                    <td style="font-weight:bold">Bank</td>
+                    <td>
+                        @if (@Model.Bank != null)
+                        {
+                            @Model.Bank.Name
+                        }
+
+                    </td>
+                    <td style="font-weight:bold">Bank Branch</td>
+                    <td>
+                        @if (Model.BankBranch != null)
+                        {
+                            @Model.BankBranch.Name
+                        }
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="font-weight:bold">Account No</td>
+                    <td>@Model.BankAccount</td>
+                    <td style="font-weight:bold">Shift</td>
+                    <td>@Model.Shift.Name</td>
+                </tr>
+                <tr>
+                    <td style="font-weight:bold">Social ID</td>
+                    <td></td>
+                    <td style="font-weight:bold">TIN No</td>
+                    <td>@Model.TinNo</td>
+                </tr>
+
+
+            </tbody>
+        </table>
     </div>
 
-    <table class="table table-striped table-bordered">
-        <tbody>
-            <tr>
-                <td style="font-weight:bold">Employee ID</td>
-                <td>@Model.EmployeeId</td>
-                <td style="font-weight:bold">Card ID</td>
-                <td>@Model.CardId</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Department</td>
-                <td>@Model.Department.Name</td>
-                <td style="font-weight:bold">Designation</td>
-                <td>@Model.Designation.Name</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Reporting Person</td>
-                <td>@Model.Employee3?.Name</td>
-                <td style="font-weight:bold">Reporting Person ID</td>
-                <td>@Model.Employee3?.EmployeeId</td>
-            </tr>
-
-            <tr>
-                <td style="font-weight:bold">Joining Date</td>
-                <td>
-                    @if (Model.JoiningDate.HasValue)
-                    {
-                        @Model.JoiningDate.Value.ToString("dd-MMM-yyyy")
-                    }
-                </td>
-                <td style="font-weight:bold">Employee Category</td>
-                <td>@Html.DisplayFor(model => model.DropDownItem3.Name)</td>
-
-            </tr>
-
-            <tr>
-                <td style="font-weight:bold">Job Type</td>
-                <td>@Html.DisplayFor(model => model.DropDownItem5.Name)</td>
-                <td style="font-weight:bold">Office Type</td>
-                <td>@Html.DisplayFor(model => model.DropDownItem8.Name)</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Office Email</td>
-                <td>@Model.OfficeEmail</td>
-                <td style="font-weight:bold">PABX</td>
-                <td>@Model.PABX</td>
-
-            </tr>
 
 
-            <tr>
-                <td style="font-weight:bold">Bank</td>
-                <td>
-                    @if (@Model.Bank != null)
-                    {
-                        @Model.Bank.Name
-                    }
+    <div class="box-header">
+        <div style="background-color:#4CAF50;color:#FFFFFF;padding:2px;">
+            <h4><b>Employee Inventory</b></h4>
+        </div>
+    </div>
+    <div class="box-body">
+        <table class="table table-striped table-bordered ">
+            <thead>
+                <tr>
+                    <th>Inventory Type</th>
+                    <th>Effective Date</th>
+                    <th>Description</th>
+                    <th>Attachments</th>
+                    <th>Detail</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
 
-                </td>
-                <td style="font-weight:bold">Bank Branch</td>
-                <td>
-                    @if (Model.BankBranch != null)
-                    {
-                        @Model.BankBranch.Name
-                    }
-                </td>
-            </tr>
-
-            <tr>
-                <td style="font-weight:bold">Account No</td>
-                <td>@Model.BankAccount</td>
-                <td style="font-weight:bold">Shift</td>
-                <td>@Model.Shift.Name</td>
-            </tr>
-            <tr>
-                <td style="font-weight:bold">Social ID</td>
-                <td></td>
-                <td style="font-weight:bold">TIN No</td>
-                <td>@Model.TinNo</td>
-            </tr>
-
-
-        </tbody>
-    </table>
 </div>
-
-
-
-
 
 
 
