--- a/KGERP/Views/Employee/EmployeeInventory.cshtml
+++ b/KGERP/Views/Employee/EmployeeInventory.cshtml
@@ -38,8 +38,8 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="form-group">
-                        <label class="form-label">Notice</label>
-                        @Html.DropDownListFor(model => model.EmployeeOperationType, new SelectList(Enum.GetValues(typeof(EmployeeNoticeEnum))
+                        <label class="form-label">Notice For</label>
+                        @Html.DropDownListFor(model => model.NoticeId, new SelectList(Enum.GetValues(typeof(EmployeeNoticeEnum))
                            .Cast<EmployeeNoticeEnum>().Select(c => new SelectListItem { Text = c.ToString(), Value = ((int)c).ToString() }), "Value", "Text"), "==Select Project First==", new
                             {
                                 id = "ddlNoticeId",
