--- a/KGERP/Views/Configuration/POTremsAndConditions.cshtml
+++ b/KGERP/Views/Configuration/POTremsAndConditions.cshtml
@@ -1,17 +1,14 @@
 ﻿@using KG.Core.Services
-
+@model KGERP.Service.Implementation.Configuration.VMPOTremsAndConditions
 @{
     ViewData["Title"] = "Trems & Conditions";
-
-
 }
-@model KGERP.Service.Implementation.Configuration.VMPOTremsAndConditions
 <style type="text/css">
-
     input, select, textarea {
         max-width: 100%;
     }
 </style>
+
 <section class="content-header">
     <h1>
         Trems & Conditions
@@ -21,6 +18,7 @@
         <li class="active">Trems & Conditions</li>
     </ol>
 </section>
+
 @using (Html.BeginForm("POTremsAndConditions", "Configuration", FormMethod.Post, new { id = "POTremsAndConditionsFormId", @class = "formValidator", onreset = "resetDDL();" }))
 {
     <section class="content">
@@ -31,35 +29,46 @@
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="box-danger">
                         <div class="box-header">
-                            <h4>Add Trems & Conditions</h4>
+                            <h3 class="text-center">Make Terms and Conditions</h3>
                         </div>
                         <!-- /.box-header -->
                         <div class="box-body">
                             @Html.HiddenFor(model => model.ID, new { id = "ZoneId" })
                             @Html.HiddenFor(model => model.ActionId, new { id = "ActionId" })
                             @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
-
-                            <div class="form-group">
-                                @Html.TextBoxFor(model => model.Key, new { id = "txtKey", @class = "form-control input-sm", @placeholder = "Key", required = "true", })
-                                @Html.ValidationMessageFor(model => model.Key, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                @Html.TextAreaFor(model => model.Value, new { id = "txtValue", @class = "form-control input-sm", @placeholder = "Value", required = "true", Rows = 3 })
-                                @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
-                                <div class="col-md-5">
-                                    <button type="button" onclick="resetForm()" class="btn btn-secondary" data-dismiss="modal">Reset</button>
+                            <div class="row">
+                                <div class="col-md-2"></div>
+                                <div class="col-md-8">
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label>Title<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                            @Html.TextBoxFor(model => model.Key, new { id = "txtKey", @class = "form-control input-sm", @placeholder = "Type title", required = "true", })
+                                            @Html.ValidationMessageFor(model => model.Key, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <label>Description<sup class="text-danger" title="Required"><b>*</b></sup></label>
+                                            @Html.TextAreaFor(model => model.Value, new { id = "txtValue", @class = "form-control input-sm", @placeholder = "Type description", required = "true", Rows = 3 })
+                                            @Html.ValidationMessageFor(model => model.Value, "", new { @class = "text-danger" })
+                                        </div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="form-group">
+                                            <div class="col-md-4"></div>
+                                            <div class="col-md-4">
+                                                <button type="button" onclick="resetForm()" class="btn btn-secondary btn-block" data-dismiss="modal">Reset</button>
+                                            </div>
+                                            <div class="col-md-4">
+                                                <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="col-md-7">
-                                    <button type="submit" id="btnSave" class="btn btn-primary btn-block"><i class='fa fa-edit'></i> Add</button>
-
-                                </div>
-
+                                <div class="col-md-2"></div>
                             </div>
                         </div>
-                        <div class="box-footer">
-                        </div>
+                        <div class="box-footer"></div>
                     </div>
                 </div>
 
@@ -161,7 +170,7 @@
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
-            
+
 
         });
 
